bindings/lisp/fae/type.lisp

(in-package :cl-user)
(defctype type-frames :int32)
(defctype type-simple :int)
(define-foreign-type type-type () () (:actual-type :pointer))
(define-parse-method type () (make-instance 'type-type))
(defclass type () ((type-ptr :initarg :type-ptr)))
(defmethod translate-to-foreign (x (type type-type)) (slot-value x 'type-ptr))
(defmethod translate-from-foreign (x (type type-type)) (make-instance 'type :type-ptr x))
(defcfun (type-simple "fae_type_simple") type (a type-simple))
(defcfun (type-pair "fae_type_pair") type (a type) (b type))
(defcfun (type-vector "fae_type_vector") type (a type) (b :int32))
(defcfun (type-frame "fae_type_frame") type (a type))
(defcfun (type-copy "fae_type_copy") type (a type))
(defcfun (type-destroy "fae_type_destroy") :void (a type))
(defcfun (type-repeat "fae_type_repeat") type (a :int) (b type))
(defcfun (type-is-simple "fae_type_is_simple") :boolean (a type))
(defcfun (type-is-pair "fae_type_is_pair") :boolean (a type))
(defcfun (type-is-vector "fae_type_is_vector") :boolean (a type))
(defcfun (type-is-frame "fae_type_is_frame") :boolean (a type))
(defcfun (type-channels "fae_type_channels") :int (a type))
(defcfun (type-get-simple "fae_type_get_simple") type-simple (a type))
(defcfun (type-get-pair-fst "fae_type_get_pair_fst") type (a type))
(defcfun (type-get-pair-snd "fae_type_get_pair_snd") type (a type))
(defcfun (type-get-vector-base "fae_type_get_vector_base") type (a type))
(defcfun (type-get-vector-size "fae_type_get_vector_size") :int32 (a type))
(defcfun (type-get-frame-base "fae_type_get_frame_base") type (a type))